# API-RAG-LlamaIndex

./: .dockerignore  .gitignore  Dockerfile  INSTALL.md  QUICK_START.md  README.md  check_config.py  delete_collection.py  docker-compose.yml  install.ps1  pyproject.toml  run.ps1
app/: __init__.py  main.py
app/core/: __init__.py  config.py  llm.py  logging.py  security.py
app/routers/: health.py  ingest.py  query.py  stats.py
app/services/: ingest_service.py  query_service.py
app/storage/: __init__.py  qdrant_store.py
tests/: README.md  __init__.py  conftest.py  test_health.py  test_ingest.py  test_query.py
